fix typo in the workflow actions main.yml file

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Validate Problems
 
 on:
   push:
-    branches: ["python-test-script]
+    branches: ["python-test-script"]
 
 jobs:
   validate:
