--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,8 @@
 name: Validate Problems
 
 on:
-  push:
-    branches: ["python-test-script"]
+  pull_request:
+    branches: ["staging", "main"]
 
 jobs:
   validate:
